<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/cdlayout"
    tools:context=".AddOrUpdatePersonActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="10dp">
                <EditText
                    android:id="@+id/iName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:inputType="textCapSentences"
                    android:hint="@string/item_name_hint" />
                <EditText
                    android:id="@+id/iPoNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:inputType="textCapSentences"
                    android:hint="@string/po_no_hint" />
                <EditText
                    android:id="@+id/iQty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:inputType="textCapSentences"
                    android:hint="@string/qty_ordered_hint" />
                <EditText
                    android:id="@+id/iSupplier"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:inputType="textCapSentences"
                    android:hint="@string/supplier_hint" />
                <EditText
                    android:id="@+id/iContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:inputType="textCapSentences"
                    android:hint="@string/contact_hint" />
                <EditText
                    android:id="@+id/iTransport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/transporter_hint" />
                <EditText
                    android:id="@+id/iLrno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:inputType="phone"
                    android:hint="@string/lr_no_hint" />
                <EditText
                    android:id="@+id/iRemarks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/remarks_hint"
                    android:inputType="number" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:layout_alignParentBottom="true">
            <Button
                android:id="@+id/bCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Cancel"/>
            <Button
                android:id="@+id/bOk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="OK"/>
        </LinearLayout>
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>